# rachel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  run.sh
default_nodes/include/: transforms_node.hpp
default_nodes/src/: transforms_node.cpp
docs/: design.md  parameters.md
include/: rachel.hpp  rachel_params.hpp  rachel_topics.hpp  rachel_utils.hpp
nodes/include/: other_node.hpp  some_node.hpp
nodes/src/: other_node.cpp  some_node.cpp
src/: main.cpp  rachel.cpp
